fix origin center wrong position; add more example;

--- a/src/index.less
+++ b/src/index.less
@@ -56,68 +56,68 @@
 
   &--center {
     position: absolute;
-    width: 20px;
-    height: 20px;
+    width: 4px;
+    height: 4px;
     border-radius: 50%;
     background: #ccc;
 
     &-top-left {
-      top: -10px;
-      left: -10px;
+      top: -2px;
+      left: -2px;
     }
     &-top-center {
-      top: -10px;
+      top: -2px;
       left: 50%;
-      margin-left: -10px;
+      margin-left: -2px;
     }
     &-top-right {
-      top: -10px;
-      right: -10px;
+      top: -2px;
+      right: -2px;
     }
     &-right-top {
-      top: -10px;
-      right: -10px;
+      top: -2px;
+      right: -2px;
     }
     &-right-center {
       top: 50%;
-      margin-top: -10px;
-      right: -10px;
+      margin-top: -2px;
+      right: -2px;
     }
     &-right-bottom {
-      bottom: -10px;
-      right: -10px;
+      bottom: -2px;
+      right: -2px;
     }
     &-center-center {
       top: 50%;
       left: 50%;
-      margin-top: -10px;
-      margin-left: -10px;
+      margin-top: -2px;
+      margin-left: -2px;
     }
     &-bottom-left {
-      bottom: -10px;
-      left: -10px;
+      bottom: -2px;
+      left: -2px;
     }
     &-bottom-center {
-      bottom: -10px;
+      bottom: -2px;
       left: 50%;
-      margin-left: -10px;
+      margin-left: -2px;
     }
     &-bottom-right {
-      bottom: -10px;
-      right: -10px;
+      bottom: -2px;
+      right: -2px;
     }
     &-left-top {
-      top: -10px;
-      left: -10px;
+      top: -2px;
+      left: -2px;
     }
     &-left-center {
       top: 50%;
-      margin-top: -10px;
-      left: -10px;
+      margin-top: -2px;
+      left: -2px;
     }
     &-left-bottom {
-      bottom: -10px;
-      left: -10px;
+      bottom: -2px;
+      left: -2px;
     }
   }
 }
